--- a/docs/iamb.1
+++ b/docs/iamb.1
@@ -114,6 +114,8 @@ Redact the selected message with the optional reason.
 Reply to the selected message.
 .It Sy ":cancel"
 Cancel the currently drafted message including replies.
+.It Sy ":replied"
+Go to the message the current message replied to.
 .It Sy ":unreads clear"
 Mark all unread rooms as read.
 .It Sy ":upload [path]"
